--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.2'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.fasterxml.uuid:java-uuid-generator:3.1.3'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-jdbc:4.48'
+    compile 'postgresql:postgresql:9.1-901-1.jdbc4'
+    //for testing
+    compile 'com.h2database:h2:1.4.187'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
