--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-jdbc:4.48'
     compile 'postgresql:postgresql:9.1-901-1.jdbc4'
+    compile 'com.sun.jersey:jersey-client:1.19'
+    compile 'com.sun.jersey:jersey-core:1.19'
+    compile 'com.sun.jersey.contribs:jersey-multipart:1.19'
+
     //for testing
     compile 'com.h2database:h2:1.4.187'
     testCompile group: 'junit', name: 'junit', version: '4.11'
